force-app/main/default/objects/Account/fields/ChurnRiskScore__c.field-meta.xml
<CustomField>
    <fullName>ChurnRiskScore__c</fullName>
    <description>Customer churn risk score from 0-100 (higher = higher risk)</description>
    <inlineHelpText>AI-calculated score indicating likelihood of customer leaving the bank (0=low risk, 100=high risk)</inlineHelpText>
    <label>Churn Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>