force-app/main/default/objects/Account/fields/CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>CustomerSegment__c</fullName>
    <description>Customer wealth/value segment classification</description>
    <inlineHelpText>Customer segmentation based on AUM and relationship value</inlineHelpText>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Mass Affluent</fullName>
                <default>true</default>
                <label>Mass Affluent</label>
            </value>
            <value>
                <fullName>Emerging Affluent</fullName>
            </value>
            <value>
                <fullName>HNI</fullName>
            </value>
            <value>
                <fullName>Super HNI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>