force-app/main/default/objects/Account/fields/CustomerSince__c.field-meta.xml
<CustomField>
    <fullName>CustomerSince__c</fullName>
    <description>The date when the customer first became a customer of the bank</description>
    <inlineHelpText>Enter the date when this customer opened their first account or product with the bank</inlineHelpText>
    <label>Customer Since</label>
    <type>Date</type>
</CustomField>