force-app/main/default/objects/Account/fields/PreferredLanguage__c.field-meta.xml
<CustomField>
    <fullName>PreferredLanguage__c</fullName>
    <description>Customer&apos;s preferred language for communication</description>
    <inlineHelpText>Select the customer&apos;s preferred language: English, Hindi, or Hinglish (mixed)</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
                <default>true</default>
                <label>Hindi</label>
            </value>
            <value>
                <fullName>Hinglish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>