force-app/main/default/objects/Account/fields/RelationshipManager__c.field-meta.xml
<CustomField>
    <fullName>RelationshipManager__c</fullName>
    <description>Name of the assigned Relationship Manager</description>
    <inlineHelpText>Enter the name of the RM assigned to this customer</inlineHelpText>
    <label>Relationship Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>